fix overflow problem with services cards

--- a/scss/_body.scss
+++ b/scss/_body.scss
@@ -96,20 +96,22 @@
 }
 
 .services__list {
-	width: 100%;
+	padding: 0 3%;
 	display: grid;
-	grid-gap: 5%;
-	grid-template-columns: repeat(2, 1fr);
+	grid-gap: 3%;
+	grid-template-columns: repeat(2, 50%);
 }
 
 .services__item {
-	width: 100%;
+	width: calc(100%/1);
 	position: relative;
 }
 
 .services__image-wrapper {
 	background: #000000;
 	transition: all 0.3s ease-out;
+	width: 100%;
+	overflow: hidden;
 }
 
 .services__image-wrapper::before {
@@ -149,13 +151,14 @@
 
 .services__image-wrapper:hover .services__image {
 	transition: all 0.3s ease-out;
+	transform: scale(1.1, 1.1);
 	opacity: .8;
 }
 
 .services__image {
-	width: 100%;
-	opacity: 0.7;
+	opacity: 0.6;
 	transition: all 0.3s ease-out;
+	max-width: 100%;
 }
 
 .services__hover-animation {
