--- a/scss/style.scss
+++ b/scss/style.scss
@@ -42,7 +42,6 @@ body {
 }
 
 .container {
-	width: 100%;
 	margin: 0 auto;
 	padding: 0px 25px;
 	text-align: center;
